--- a/RelationalAlgebraWinFormsApp/RelationalAlgebraWinFormsApp.csproj
+++ b/RelationalAlgebraWinFormsApp/RelationalAlgebraWinFormsApp.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -52,12 +55,13 @@
     <Compile Include="AddColum.Designer.cs">
       <DependentUpon>AddColum.cs</DependentUpon>
     </Compile>
-    <Compile Include="ChooseDiff.cs">
+    <Compile Include="Choose.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ChooseDiff.Designer.cs">
-      <DependentUpon>ChooseDiff.cs</DependentUpon>
+    <Compile Include="Choose.Designer.cs">
+      <DependentUpon>Choose.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataGridViewDesignHelper.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="OperationSelectionForm.cs">
       <SubType>Form</SubType>
@@ -86,8 +90,8 @@
     <EmbeddedResource Include="AddColum.resx">
       <DependentUpon>AddColum.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ChooseDiff.resx">
-      <DependentUpon>ChooseDiff.cs</DependentUpon>
+    <EmbeddedResource Include="Choose.resx">
+      <DependentUpon>Choose.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OperationSelectionForm.resx">
       <DependentUpon>OperationSelectionForm.cs</DependentUpon>
@@ -107,6 +111,8 @@
     <EmbeddedResource Include="Обучающее приложение.resx">
       <DependentUpon>Обучающее приложение.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram2.cd" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
